[velux] refactor java 11 deprecated code
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>